Bug 1691135 - pt 1. SHistoryListeners track browser ID as it is constant r=nika

Differential Revision: https://phabricator.services.mozilla.com/D106841