dom/chrome-webidl/BrowsingContext.webidl
@@ -66,6 +66,8 @@ interface BrowsingContext {
 
   static BrowsingContext? getFromWindow(WindowProxy window);
 
+  static BrowsingContext? getCurrentTopByBrowserId(unsigned long long aId);
+
   sequence<BrowsingContext> getAllBrowsingContextsInSubtree();
 
   BrowsingContext? findChildWithName(DOMString name, BrowsingContext accessor);
